# rss618-portfolio

./: .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  main.rs  state.rs
backend/src/api/: auth.rs  blog.rs  health.rs  inquiries.rs  mod.rs
backend/src/dao/blog/: blog_post.rs  blog_post_summary.rs  mod.rs  sort.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: blog.rs  mod.rs
backend/src/dto/: mod.rs
backend/src/dto/auth/: auth_error.rs  firebase_auth_error_response.rs  firebase_auth_request.rs  firebase_auth_response.rs  firebase_claims.rs  firebase_keys.rs  login_request.rs  login_response.rs  mod.rs  token_refresh_response.rs
backend/src/grpc/: auth.rs  blog.rs  mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/repositories/: mod.rs
backend/src/repositories/blog/: mod.rs
backend/src/services/: auth.rs  mod.rs
backend/src/services/blog/: mod.rs
backend/src/utils/: cookies.rs  mod.rs
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: constants.ts
frontend/src/lib/api/: auth.api.ts  (+2 more)
frontend/src/routes/: +layout.svelte  +page.svelte
proto/: auth.proto  blog.proto  buf.gen.yaml
src/: app.html
src/lib/stores/: theme.store.ts
src/lib/styles/: fonts.css  global.css  theme.css
src/routes/: +layout.svelte
(+42 files in other folders)
